<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.spring</groupId>
    <artifactId>Backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Backend</name>
    <description>Backend</description>
    <packaging>pom</packaging>
    <properties>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>ApiGateway</module>
        <module>ServiceDiscovery</module>
        <module>ConfigServer</module>
        <module>AuthenticationServer</module>
        <module>UserService</module>
        <module>PostService</module>
        <module>CommentService</module>
        <module>LikeService</module>
        <module>UploadService</module>
    </modules>


</project>
